--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ts-pretty",
 	"version": "1.0.0",
-	"description": "prettier plugin harnessing the TypeScript Compiler API and ts-morph",
+	"description": "prettier plugin harnessing the TypeScript Compiler API",
 	"author": "Frank Stock",
 	"license": "MIT",
 	"keywords": [
@@ -15,11 +15,11 @@
 		"formatter",
 		"prettier"
 	],
-	"main": "prettier-plugin-bootstrap/index.js",
+	"main": "index.js",
 	"scripts": {
 		"clean": "rimraf dist && rimraf ./.nyc_output && rimraf ./coverage",
-		"build": "webpack --config=./webpack.config.js",
-		"dev": "cross-env TS_NODE_PROJECT=tsconfig.app.json ./node_modules/prettier/bin-prettier.js --no-plugin-search --plugin=prettier-plugin-bootstrap --no-cache  ./fixtures/input/ts-sample.ts",
+		"build": "webpack --config=./scripts/webpack.config.js",
+		"dev": "cross-env TS_NODE_PROJECT=tsconfig.app.json ./node_modules/prettier/bin-prettier.js --no-plugin-search --plugin=./scripts/ --no-cache ./fixtures/input/ts-sample.ts",
 		"test": "cross-env TS_NODE_PROJECT=tsconfig.spec.json node --require source-map-support/register --require ts-node/register/transpile-only ./node_modules/jasmine/bin/jasmine.js --config=./jasmine.json",
 		"coverage": "npm run clean && nyc -e .ts -x scripts -x \"**/*.ispec.ts\" -x \"**/*.spec.ts\" -x \"**/*.mock.ts\" --reporter=text-summary --reporter=lcov npm run test"
 	},
@@ -33,8 +33,7 @@
 	"homepage": "https://github.com/pcafstockf/ts-pretty#readme",
 	"dependencies": {
 		"json5": "~2.2.2",
-		"lodash": "~4.17.21",
-		"ts-morph": "^17.0.1"
+		"lodash": "~4.17.21"
 	},
 	"peerDependencies": {
 		"prettier": "^2.0.0",
@@ -56,6 +55,8 @@
 		"ts-loader": "^9.4.2",
 		"ts-node": "~10.9.1",
 		"webpack": "^5.75.0",
-		"webpack-cli": "^5.0.1"
+		"webpack-bundle-analyzer": "^4.7.0",
+		"webpack-cli": "^5.0.1",
+		"webpack-node-externals": "^3.0.0"
 	}
 }
