--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ts-pretty",
 	"version": "1.0.0",
-	"description": "prettier plugin harnessing the TypeScript Compiler API",
+	"description": "Configurable prettier plugin which harnesses the TypeScript Compiler API",
 	"author": "Frank Stock",
 	"license": "MIT",
 	"keywords": [
@@ -11,6 +11,7 @@
 		"pretty",
 		"beautify",
 		"prettyprint",
+		"pretty-print",
 		"beautifier",
 		"formatter",
 		"prettier"
@@ -21,7 +22,8 @@
 		"build": "webpack --config=./scripts/webpack.config.js",
 		"dev": "cross-env TS_NODE_PROJECT=tsconfig.app.json ./node_modules/prettier/bin-prettier.js --no-plugin-search --plugin=./scripts/ --no-cache ./fixtures/input/ts-sample.ts",
 		"test": "cross-env TS_NODE_PROJECT=tsconfig.spec.json node --require source-map-support/register --require ts-node/register/transpile-only ./node_modules/jasmine/bin/jasmine.js --config=./jasmine.json",
-		"coverage": "npm run clean && nyc -e .ts -x scripts -x \"**/*.ispec.ts\" -x \"**/*.spec.ts\" -x \"**/*.mock.ts\" --reporter=text-summary --reporter=lcov npm run test"
+		"coverage": "npm run clean && nyc -e .ts -x scripts -x \"**/*.ispec.ts\" -x \"**/*.spec.ts\" -x \"**/*.mock.ts\" --reporter=text-summary --reporter=lcov npm run test",
+		"release": "npm run build && node ./scripts/prep-pub-pkg.js && cpy README.md dist/ && cd dist && npm publish"
 	},
 	"repository": {
 		"type": "git",
@@ -33,11 +35,11 @@
 	"homepage": "https://github.com/pcafstockf/ts-pretty#readme",
 	"dependencies": {
 		"json5": "~2.2.2",
-		"lodash": "~4.17.21"
+		"lodash": "~4.17.21",
+		"tslib": "~2.4.1"
 	},
 	"peerDependencies": {
 		"prettier": "^2.0.0",
-		"tslib": "^2.4.1",
 		"typescript": "^4.9.4"
 	},
 	"devDependencies": {
@@ -51,9 +53,9 @@
 		"jasmine-spec-reporter": "~7.0.0",
 		"nyc": "~15.1.0",
 		"source-map-loader": "^4.0.1",
-		"source-map-support": "~0.5.21",
+		"source-map-support": "^0.5.21",
 		"ts-loader": "^9.4.2",
-		"ts-node": "~10.9.1",
+		"ts-node": "^10.9.1",
 		"webpack": "^5.75.0",
 		"webpack-bundle-analyzer": "^4.7.0",
 		"webpack-cli": "^5.0.1",
