Add eslint and update various config files.

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,6 @@
   "singleQuote": true,
   "trailingComma": "none",
   "semi": true,
-  "tsbOptimizeImports": true,
-  "tsbUseBuiltins": false
+  "tspOrganizeImports": true,
+  "tspUseBuiltins": false
 }
