--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
 	"scripts": {
 		"clean": "rimraf dist && rimraf ./.nyc_output && rimraf ./coverage",
 		"build": "webpack --config=./scripts/webpack.config.js",
-		"dev": "cross-env TS_NODE_PROJECT=tsconfig.app.json ./node_modules/prettier/bin-prettier.js --no-plugin-search --plugin=./scripts/ --no-cache ./fixtures/input/ts-sample.ts",
+		"dev": "cross-env TS_NODE_PROJECT=tsconfig.app.json ./node_modules/prettier/bin-prettier.js --no-plugin-search --plugin=scripts/ --no-cache ./fixtures/input/ts-sample.ts",
+		"lint": "cross-env TS_NODE_PROJECT=tsconfig.app.json eslint 'src/**/*.ts'",
+		"pretest": "npm run lint",
 		"test": "cross-env TS_NODE_PROJECT=tsconfig.spec.json node --require source-map-support/register --require ts-node/register/transpile-only ./node_modules/jasmine/bin/jasmine.js --config=./jasmine.json",
 		"coverage": "npm run clean && nyc -e .ts -x scripts -x \"**/*.ispec.ts\" -x \"**/*.spec.ts\" -x \"**/*.mock.ts\" --reporter=text-summary --reporter=lcov npm run test",
 		"release": "npm run build && node ./scripts/prep-pub-pkg.js && cpy README.md dist/ && cd dist && npm publish"
@@ -47,7 +49,12 @@
 		"@types/lodash": "~4.14.191",
 		"@types/node": "~16.18.11",
 		"@types/prettier": "^2.7.2",
+		"@typescript-eslint/eslint-plugin": "^5.48.1",
 		"cross-env": "^7.0.3",
+		"eslint": "^8.31.0",
+		"eslint-plugin-import": "^2.27.4",
+		"eslint-plugin-jsdoc": "^39.6.4",
+		"eslint-plugin-prefer-arrow": "^1.2.3",
 		"jasmine": "~4.5.0",
 		"jasmine-console-reporter": "~3.1.0",
 		"jasmine-spec-reporter": "~7.0.0",
